// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test sqle/SqlManagementConf/ConfForm render init snap shot 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw css-19jfn7e"
    >
      <section
        class="css-1x6j49j"
      >
        <section
          class="has-border css-1114g56"
        >
          <section
            class="css-bspaai"
          >
            <h3
              class="ant-typography css-p50odb css-dev-only-do-not-override-txh9fw"
            >
              <svg
                class="title-icon"
                height="40"
                viewBox="0 0 18 18"
                width="42"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.75 11.25v3.755a.745.745 0 0 1-.745.745H2.995a.745.745 0 0 1-.745-.745V11.25zm0-4.5H2.25V2.995c0-.411.334-.745.745-.745h12.01c.411 0 .745.334.745.745z"
                  fill="#C3C6CD"
                />
                <path
                  d="M1.5 8.25h15v1.5h-15z"
                  fill="#8A8F99"
                />
              </svg>
              <span>
                为数据源开启扫描任务
              </span>
            </h3>
            <h1
              class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
            >
              选择数据源
            </h1>
            <div
              class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="businessScope"
                    title="所属业务"
                  >
                    所属业务
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="businessScope_list_0"
                              aria-autocomplete="list"
                              aria-controls="businessScope_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="businessScope_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="businessScope"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            请选择{{name}}
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="instanceType"
                    title="数据源类型"
                  >
                    数据源类型
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="instanceType_list_0"
                              aria-autocomplete="list"
                              aria-controls="instanceType_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="instanceType_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="instanceType"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            请选择{{name}}
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="instanceName_list_0"
                              aria-autocomplete="list"
                              aria-controls="instanceName_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="instanceName_list"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="instanceName"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            请选择{{name}}
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-required-style has-label-tip css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="instanceId"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        数据源名称
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        请选择所属业务来获取对应的数据源
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-show-search"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="instanceId_list_0"
                              aria-autocomplete="list"
                              aria-controls="instanceId_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="instanceId_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="instanceId"
                              role="combobox"
                              type="search"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            请选择{{name}}
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-spin-container"
              >
                <h1
                  class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
                >
                  选择扫描类型
                </h1>
                <div
                  class="ant-form-item has-label-tip has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-no-colon"
                        for="scanTypes"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            扫描类型
                          </div>
                          <div
                            class="tip-content-box"
                          >
                            选择您需要扫描的SQL对象
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="css-qly0fu"
                            id="scanTypes"
                          >
                            选择数据源类型后获取对应的扫描任务类型
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </section>
      </section>
    </form>
  </div>
</body>
`;

exports[`test sqle/SqlManagementConf/ConfForm render snap shot when defaultValue is defined 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw css-19jfn7e"
    >
      <section
        class="css-1x6j49j"
      >
        <section
          class="has-border css-1114g56"
        >
          <section
            class="css-bspaai"
          >
            <h3
              class="ant-typography css-p50odb css-dev-only-do-not-override-txh9fw"
            >
              <svg
                class="title-icon"
                height="40"
                viewBox="0 0 18 18"
                width="42"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.75 11.25v3.755a.745.745 0 0 1-.745.745H2.995a.745.745 0 0 1-.745-.745V11.25zm0-4.5H2.25V2.995c0-.411.334-.745.745-.745h12.01c.411 0 .745.334.745.745z"
                  fill="#C3C6CD"
                />
                <path
                  d="M1.5 8.25h15v1.5h-15z"
                  fill="#8A8F99"
                />
              </svg>
              <span>
                为数据源开启扫描任务
              </span>
            </h3>
            <h1
              class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
            >
              选择数据源
            </h1>
            <div
              class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="businessScope"
                    title="所属业务"
                  >
                    所属业务
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-disabled"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="businessScope_list_0"
                              aria-autocomplete="list"
                              aria-controls="businessScope_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="businessScope_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              disabled=""
                              id="businessScope"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-item"
                            title="business1"
                          >
                            business1
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="instanceType"
                    title="数据源类型"
                  >
                    数据源类型
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="instanceType_list_0"
                              aria-autocomplete="list"
                              aria-controls="instanceType_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="instanceType_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              disabled=""
                              id="instanceType"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-item"
                            title="MySQL"
                          >
                            MySQL
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="instanceName_list_0"
                              aria-autocomplete="list"
                              aria-controls="instanceName_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="instanceName_list"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="instanceName"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-item"
                            title="mysql-1(10.186.62.13:33061)"
                          >
                            mysql-1(10.186.62.13:33061)
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-required-style has-label-tip css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="instanceId"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        数据源名称
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        请选择所属业务来获取对应的数据源
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-disabled ant-select-show-search"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="instanceId_list_0"
                              aria-autocomplete="list"
                              aria-controls="instanceId_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="instanceId_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              disabled=""
                              id="instanceId"
                              role="combobox"
                              type="search"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-item"
                            title="mysql-1(10.186.62.13:33061)"
                          >
                            mysql-1(10.186.62.13:33061)
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-spin-container"
              >
                <h1
                  class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
                >
                  选择扫描类型
                </h1>
                <div
                  class="ant-form-item has-label-tip has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-no-colon"
                        for="scanTypes"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            扫描类型
                          </div>
                          <div
                            class="tip-content-box"
                          >
                            选择您需要扫描的SQL对象
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center scan-types-selector actiontech-toggle-tokens css-jucxeg"
                            id="scanTypes"
                            style="flex-wrap: wrap; margin-bottom: -8px;"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px; padding-bottom: 8px;"
                            >
                              <div
                                class="toggle-token-item toggle-token-item-with-checkbox toggle-token-item-no-style"
                              >
                                <span
                                  aria-label="全部"
                                  class="toggle-token-item-label"
                                  title="全部"
                                >
                                  全部
                                </span>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px; padding-bottom: 8px;"
                            >
                              <div
                                class="toggle-token-item toggle-token-item-with-checkbox toggle-token-item-no-style"
                              >
                                <span
                                  aria-label=""
                                  class="toggle-token-item-label"
                                  title=""
                                >
                                  <div
                                    class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
                                  >
                                    自定义
                                  </div>
                                </span>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px; padding-bottom: 8px;"
                            >
                              <div
                                class="toggle-token-item toggle-token-item-with-checkbox toggle-token-item-no-style"
                              >
                                <span
                                  aria-label=""
                                  class="toggle-token-item-label"
                                  title=""
                                >
                                  <div
                                    class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
                                  >
                                    Mybatis 扫描
                                  </div>
                                </span>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px; padding-bottom: 8px;"
                            >
                              <div
                                class="toggle-token-item toggle-token-item-with-checkbox toggle-token-item-checked toggle-token-item-no-style"
                              >
                                <div
                                  class="toggle-token-item-with-checkbox-children"
                                >
                                  <span
                                    aria-label="check-circle"
                                    class="anticon anticon-check-circle"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="check-circle"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    aria-label=""
                                    class="toggle-token-item-label"
                                    title=""
                                  >
                                    <div
                                      class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
                                    >
                                      MySQL库表元数据
                                    </div>
                                  </span>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px; padding-bottom: 8px;"
                            >
                              <div
                                class="toggle-token-item toggle-token-item-with-checkbox toggle-token-item-no-style"
                              >
                                <span
                                  aria-label=""
                                  class="toggle-token-item-label"
                                  title=""
                                >
                                  <div
                                    class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
                                  >
                                    阿里RDS MySQL慢日志
                                  </div>
                                </span>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px; padding-bottom: 8px;"
                            >
                              <div
                                class="toggle-token-item toggle-token-item-with-checkbox toggle-token-item-no-style"
                              >
                                <span
                                  aria-label=""
                                  class="toggle-token-item-label"
                                  title=""
                                >
                                  <div
                                    class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
                                  >
                                    SQL文件
                                  </div>
                                </span>
                              </div>
                            </div>
                            <div
                              class="ant-space-item"
                              style="padding-bottom: 8px;"
                            >
                              <div
                                class="toggle-token-item toggle-token-item-with-checkbox toggle-token-item-no-style"
                              >
                                <span
                                  aria-label=""
                                  class="toggle-token-item-label"
                                  title=""
                                >
                                  <div
                                    class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs css-dev-only-do-not-override-txh9fw"
                                  >
                                    测试扫描类型
                                  </div>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </section>
        <section
          class="has-border css-1114g56"
        >
          <section
            class="css-bspaai"
          >
            <h1
              class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
            >
              编辑扫描详情·MySQL库表元数据
            </h1>
            <div
              class="ant-form-item has-label-tip css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="mysql_schema_meta_collect_interval_minute"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        采集周期
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        分钟
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input ant-input-status-success css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                        id="mysql_schema_meta_collect_interval_minute"
                        placeholder="请输入{{name}}"
                        type="text"
                        value="61"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item  css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="mysql_schema_meta_collect_view"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        是否采集视图信息
                      </div>
                      <div
                        class="tip-content-box"
                        hidden=""
                      />
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <button
                        aria-checked="false"
                        class="ant-switch basic-switch-wrapper css-g6dhbn css-dev-only-do-not-override-txh9fw"
                        id="mysql_schema_meta_collect_view"
                        role="switch"
                        type="button"
                      >
                        <div
                          class="ant-switch-handle"
                        />
                        <span
                          class="ant-switch-inner"
                        >
                          <span
                            class="ant-switch-inner-checked"
                          />
                          <span
                            class="ant-switch-inner-unchecked"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-label-tip has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="mysql_schema_meta_ruleTemplateName"
                    title=""
                  >
                    <div
                      class="label-cont-custom"
                    >
                      <div>
                        审核规则模板
                      </div>
                      <div
                        class="tip-content-box"
                      >
                        如果未指定此项会优先使用数据源绑定的模板
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="mysql_schema_meta_ruleTemplateName_list_0"
                              aria-autocomplete="list"
                              aria-controls="mysql_schema_meta_ruleTemplateName_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="mysql_schema_meta_ruleTemplateName_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="mysql_schema_meta_ruleTemplateName"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-item"
                            title="default_MySQL"
                          >
                            default_MySQL
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          aria-hidden="true"
                          class="ant-select-clear"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <svg
                            fill="currentColor"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </section>
      </section>
    </form>
  </div>
</body>
`;
